[gd_scene load_steps=3 format=3 uid="uid://bikcsbj24ku4d"]

[ext_resource type="Script" path="res://Scripts/control.gd" id="1_8sqc4"]

[sub_resource type="Theme" id="Theme_s81or"]
default_font_size = 60
Label/colors/font_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8sqc4")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2310.0
offset_top = -1439.0
offset_right = 2310.0
offset_bottom = 1439.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="ProgressBar2" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_top = -601.0
offset_right = 182.0
offset_bottom = -523.0
grow_horizontal = 2
value = 10.0
show_percentage = false

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 257.0
offset_top = -649.0
offset_right = 326.0
offset_bottom = -484.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/normal_font_size = 120
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -601.0
offset_right = 127.0
offset_bottom = -518.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_s81or")
theme_override_colors/default_color = Color(0.854902, 0.105882, 0.313726, 1)
text = "Delivery"
fit_content = true
scroll_active = false
autowrap_mode = 0
